# pegium

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  RECOVERY.md  RECOVERY_REWRITE_PLAN.md  mkdocs.yml
examples/arithmetics/: CMakeLists.txt  README.md  package-lock.json  package.json  tmp_runtime_test.calc
examples/arithmetics/src/: ArithmeticsModule.cpp  Language.cpp  cli_main.cpp  lsp_main.cpp
examples/arithmetics/tests/: ArithmeticsModule.cpp  CodeActionHarness.cpp  DocumentPipeline.cpp  Language.cpp  LanguageCallRecovery.cpp  LanguageGarbageLocality.cpp  LanguageKeywordFuzz.cpp  LanguageMixedSemicolonRecovery.cpp  LanguageOperatorRecovery.cpp  LanguagePanicResyncRecovery.cpp  LanguageRepeatedSemicolonTail.cpp  LanguageSemicolonFuzz.cpp  LanguageSemicolonPerf.cpp  LanguageServerFeatures.cpp  LanguageTestSupport.hpp  ParserConstruction.cpp  RecoveryFuzzer.cpp  RecoveryProbeSamples.cpp  RecoverySamples.cpp
examples/arithmetics/vscode/: language-configuration.json  package.json
examples/domainmodel/: CMakeLists.txt  README.md  package-lock.json  package.json
examples/domainmodel/src/: DomainModelModule.cpp  Language.cpp  cli_main.cpp  lsp_main.cpp
examples/domainmodel/tests/: DomainModelModule.cpp  Language.cpp  LanguageKeywordFuzz.cpp  RecoveryProbeSamples.cpp  RecoverySamples.cpp
examples/domainmodel/vscode/: package.json
examples/requirements/: .vscodeignore  CMakeLists.txt  README.md  package-lock.json  package.json
examples/requirements/src/: Language.cpp  RequirementsModule.cpp  cli_main.cpp  lsp_main.cpp
examples/requirements/tests/: Language.cpp  LanguageKeywordFuzz.cpp  RecoveryProbeSamples.cpp  RecoverySamples.cpp  RequirementsModule.cpp
examples/requirements/vscode/: package.json  tsconfig.json
examples/statemachine/: CMakeLists.txt  README.md  package-lock.json  package.json
examples/statemachine/src/: Language.cpp  StatemachineModule.cpp  cli_main.cpp  lsp_main.cpp
examples/statemachine/tests/: HarnessSmoke.cpp  Language.cpp  LanguageKeywordFuzz.cpp  RecoveryProbeSamples.cpp  RecoverySamples.cpp  StatemachineModule.cpp
examples/statemachine/vscode/: esbuild.mjs  package.json
src/pegium/: CMakeLists.txt  Feature.hpp  IParser.hpp  IParser.hpp.old  Parser.cpp  Parser.cpp.old  Parser.hpp  Parser.hpp.old  Services.hpp  grammar.cpp  grammar.hpp  grammar.hpp.old  rule_macros_begin.h  rule_macros_end.h  syntax-tree.cpp  syntax-tree.hpp
src/pegium/cli/: CMakeLists.txt  CliUtils.cpp  CliUtils.hpp
src/pegium/converter/: AstJsonConverter.cpp  AstJsonConverter.hpp  CstJsonConverter.cpp  CstJsonConverter.hpp
src/pegium/converters/: AstJsonConverter.cpp  AstJsonConverter.hpp  CMakeLists.txt  CstJsonConverter.cpp  CstJsonConverter.hpp
src/pegium/core/: CMakeLists.txt
src/pegium/documentation/: CommentProvider.hpp  DefaultCommentProvider.cpp  DefaultCommentProvider.hpp  DefaultDocumentationProvider.cpp  DefaultDocumentationProvider.hpp  DocumentationProvider.hpp
src/pegium/execution/: TaskScheduler.cpp  TaskScheduler.hpp
src/pegium/grammar/: AbstractElement.cpp  AbstractElement.hpp  AbstractRule.hpp  Action.hpp  AndPredicate.cpp  AndPredicate.hpp  AnyCharacter.cpp  AnyCharacter.hpp  Assignment.cpp  Assignment.hpp  CharacterRange.cpp  CharacterRange.hpp  Context.hpp  Create.cpp  Create.hpp  CrossReference.hpp  DataTypeRule.cpp  DataTypeRule.hpp  FeatureValue.cpp  FeatureValue.hpp  Group.cpp  Group.hpp  IAction.hpp  IAssignment.hpp  IContext.hpp  IGrammarElement.hpp  IRule.hpp  InfixRule.cpp  InfixRule.hpp  Literal.cpp  Literal.hpp  Nest.cpp  Nest.hpp  NotPredicate.cpp  NotPredicate.hpp  OrderedChoice.cpp  OrderedChoice.hpp  ParserRule.cpp  ParserRule.hpp  Repetition.cpp  (+8 more)
src/pegium/lsp/: AbstractCallHierarchyProvider.cpp  AbstractCallHierarchyProvider.hpp  AbstractExecuteCommandHandler.cpp  AbstractExecuteCommandHandler.hpp  AbstractFormatter.cpp  AbstractFormatter.hpp  AbstractGoToImplementationProvider.cpp  AbstractGoToImplementationProvider.hpp  AbstractInlayHintProvider.cpp  AbstractInlayHintProvider.hpp  AbstractSemanticTokenProvider.cpp  AbstractSemanticTokenProvider.hpp  AbstractSignatureHelpProvider.cpp  AbstractSignatureHelpProvider.hpp  AbstractTypeDefinitionProvider.cpp  AbstractTypeDefinitionProvider.hpp  AbstractTypeHierarchyProvider.cpp  AbstractTypeHierarchyProvider.hpp  CMakeLists.txt  CallHierarchyProvider.hpp  CodeActionProvider.hpp  CodeLensProvider.hpp  CompletionProvider.hpp  DeclarationProvider.hpp  DefaultCodeActionProvider.cpp  DefaultCodeActionProvider.hpp  DefaultCompletionProvider.cpp  DefaultCompletionProvider.hpp  DefaultDefinitionProvider.cpp  DefaultDefinitionProvider.hpp  DefaultDocumentHighlightProvider.cpp  DefaultDocumentHighlightProvider.hpp  DefaultDocumentSymbolProvider.cpp  DefaultDocumentSymbolProvider.hpp  DefaultDocumentUpdateHandler.cpp  DefaultDocumentUpdateHandler.hpp  DefaultFileOperationHandler.cpp  DefaultFileOperationHandler.hpp  DefaultFoldingRangeProvider.cpp  DefaultFoldingRangeProvider.hpp  (+69 more)
src/pegium/parser/: AbstractElement.hpp  AbstractRule.hpp  Action.hpp  AndPredicate.cpp  AndPredicate.hpp  AnyCharacter.hpp  Assignment.cpp  Assignment.hpp  AssignmentHelpers.hpp  AssignmentSupport.hpp  CharacterRange.hpp  CompletionSupport.hpp  Context.hpp  ContextShared.hpp  Create.hpp  CrossReference.hpp  CstSearch.hpp  DataTypeRule.hpp  DataTypeRuleSupport.hpp  EditableRecoverySupport.hpp  ExpectContext.hpp  ExpectFrontier.hpp  FeatureValueSupport.hpp  Group.cpp  Group.hpp  IContext.hpp  IParser.hpp  InfixRule.hpp  InfixRuleSupport.hpp  Introspection.hpp  Literal.hpp  LiteralFuzzyMatcher.cpp  Nest.hpp  (+43 more)
templates/project/: .gitignore  CMakeLists.txt  README.md
tests/bench/: Arithmetics.cpp  BenchmarkSupport.hpp  CMakeLists.txt  DomainModel.cpp  LspQueries.cpp  Main.cpp  Parser.cpp  Requirements.cpp  Scope.cpp  Statemachine.cpp  Workspace.cpp
tests/fuzz/: AdversarialLanguage.cpp  AdversarialLanguage.hpp  CMakeLists.txt  ExampleKeywordFuzz.cpp  Parser.cpp  StressLanguage.cpp  StressLanguage.hpp  WorkspaceFuzzHarness.cpp  WorkspaceFuzzHarness.hpp  WorkspaceFuzzTest.cpp
(+1283 files in other folders)
